<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.Citas.VerCitas"
    android:background="@color/beige">

    <!-- Contenedor de los campos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/viewIcono"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:tint="@color/darkblue"
            android:layout_marginVertical="20dp"/>

        <!-- Campo de Nombre -->
        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Especialidad médica:"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <AutoCompleteTextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Especialidad médica"
            android:textSize="24sp"
            android:padding="10dp"
            android:completionThreshold="1"/>

        <!-- Campo de Hora -->
        <TextView
            android:id="@+id/viewFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fecha:"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@id/viewFecha"
            android:inputType="datetime"
            android:textSize="24sp"
            android:paddingStart="8dp"
            />

        <!-- Campo de Fecha -->
        <TextView
            android:id="@+id/viewHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hora:"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@id/viewHora"
            android:inputType="datetime"
            android:textSize="24sp"
            android:paddingStart="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordatorio"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_recordatorio"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <!-- Botón para Guardar -->
        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_guardar"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fabEliminar"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/hint_borrar"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/purple"
            android:gravity="center"
            app:icon="@drawable/ic_delete"
            app:iconSize="40dp"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fabEditar"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/darkblue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/hint_cambiar"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:icon="@drawable/ic_edit"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconSize="40dp"
            android:layout_marginStart="9dp"/>

    </LinearLayout>


</LinearLayout>